package main

import (
	"context"
	"fmt"
	"log"
	"net"
	"os"
	"os/signal"
	"sync"
	"syscall"

	"google.golang.org/grpc"
	"google.golang.org/grpc/codes"
	"google.golang.org/grpc/reflection"
	"google.golang.org/grpc/status"

	inventoryV1 "github.com/kont1n/MSA_Rocket_Factory/shared/pkg/proto/inventory/v1"
)

const grpcPort = 50052

type inventoryService struct {
	inventoryV1.UnimplementedInventoryServiceServer

	mu sync.RWMutex
	parts map[string]*inventoryV1.Part
}

func main() {
	// –°–æ–∑–¥–∞–µ–º gRPC —Å–æ–µ–¥–∏–Ω–µ–Ω–∏–µ
	lis, err := net.Listen("tcp", fmt.Sprintf(":%d", grpcPort))
	if err != nil {
		log.Printf("failed to listen: %v\n", err)
		return
	}
	defer func() {
		if cerr := lis.Close(); cerr != nil {
			log.Printf("failed to close listener: %v\n", cerr)
		}
	}()

	// –°–æ–∑–¥–∞–µ–º gRPC —Å–µ—Ä–≤–µ—Ä
	s := grpc.NewServer()

	// –†–µ–≥–∏—Å—Ç—Ä–∏—Ä—É–µ–º –Ω–∞—à —Å–µ—Ä–≤–∏—Å
	service := &inventoryService{}
	inventoryV1.RegisterInventoryServiceServer(s, service)

	// –í–∫–ª—é—á–∞–µ–º —Ä–µ—Ñ–ª–µ–∫—Å–∏—é –¥–ª—è –æ—Ç–ª–∞–¥–∫–∏
	reflection.Register(s)

	go func() {
		log.Printf("üöÄ gRPC server listening on %d\n", grpcPort)
		err = s.Serve(lis)
		if err != nil {
			log.Printf("failed to serve: %v\n", err)
			return
		}
	}()

	// Graceful shutdown
	quit := make(chan os.Signal, 1)
	signal.Notify(quit, syscall.SIGINT, syscall.SIGTERM)
	<-quit
	log.Println("üõë Shutting down gRPC server...")
	s.GracefulStop()
	log.Println("‚úÖ Server stopped")
}

// GetPart –ø–æ–ª—É—á–∞–µ—Ç –∏–Ω—Ñ–æ—Ä–º–∞—Ü–∏—é –æ –¥–µ—Ç–∞–ª–∏ –ø–æ UUID
func (s *inventoryService) GetPart(ctx context.Context, req *inventoryV1.GetPartRequest) (*inventoryV1.GetPartResponse, error) {
	s.mu.RLock()
	defer s.mu.RUnlock()

	part, ok := s.parts[req.PartUuid]
	if !ok {
		return nil, status.Errorf(codes.NotFound, "part not found")
	}

	return &inventoryV1.GetPartResponse{
		Part: part,
	}, nil
}

// ListParts –ø–æ–ª—É—á–∞–µ—Ç —Å–ø–∏—Å–æ–∫ –¥–µ—Ç–∞–ª–µ–π –ø–æ —Ñ–∏–ª—å—Ç—Ä—É
func (s *inventoryService) ListParts(ctx context.Context, req *inventoryV1.ListPartsRequest) (*inventoryV1.ListPartsResponse, error) {
	var list []*inventoryV1.Part
	var nameSet []*inventoryV1.Part
	var categorySet []*inventoryV1.Part
	var manufacturerCountrySet []*inventoryV1.Part
	var tagSet []*inventoryV1.Part	

	s.mu.RLock()

		// –ü–æ–ª—É—á–∞–µ–º —Ñ–∏–ª—å—Ç—Ä
		filter := req.GetFilter()

		// –ï—Å–ª–∏ —Ñ–∏–ª—å—Ç—Ä –Ω–µ –∑–∞–¥–∞–Ω, –≤–æ–∑–≤—Ä–∞—â–∞–µ–º –≤—Å–µ –¥–µ—Ç–∞–ª–∏
		if filter == nil {
			for _, part := range s.parts {
				list = append(list, part)
			}
			return &inventoryV1.ListPartsResponse{
				Parts: list,
			}, nil
		}

		// –§–∏–ª—å—Ç—Ä—É–µ–º –¥–µ—Ç–∞–ª–∏ –ø–æ UUID
		uuids := filter.GetPartUuid()
		if len(uuids) > 0 {
			for _, uuid := range uuids {
				part, ok := s.parts[uuid]
				if ok {
					list = append(list, part)
				}
			}
		} else {
			for _, part := range s.parts {
				list = append(list, part)
			}
		}

	s.mu.RUnlock()

	// –§–∏–ª—å—Ç—Ä—É–µ–º –¥–µ—Ç–∞–ª–∏ –ø–æ –∏–º–µ–Ω–∏
	names := filter.GetPartName()
	if len(names) > 0 {
		for _, name := range names {
			for _, part := range list {
				if part.GetName() == name {
					nameSet = append(nameSet, part)
				}
			}
		}
	} else {
		nameSet = list
	}

	// –§–∏–ª—å—Ç—Ä—É–µ–º –¥–µ—Ç–∞–ª–∏ –ø–æ –∫–∞—Ç–µ–≥–æ—Ä–∏–∏
	categories := filter.GetCategory()
	if len(categories) > 0 {
		for _, category := range categories {
			for _, part := range list {
				if part.GetCategory() == category {
					categorySet = append(categorySet, part)
				}
			}
		}
	} else {
		categorySet = nameSet
	}

	// –§–∏–ª—å—Ç—Ä—É–µ–º –¥–µ—Ç–∞–ª–∏ –ø–æ —Å—Ç—Ä–∞–Ω–µ –ø—Ä–æ–∏–∑–≤–æ–¥–∏—Ç–µ–ª—è
	manufacturerCountries := filter.GetManufacturerCountry()
	if len(manufacturerCountries) > 0 {
		for _, manufacturerCountry := range manufacturerCountries {
			for _, part := range list {
				if part.GetManufacturer().GetCountry() == manufacturerCountry {
					manufacturerCountrySet = append(manufacturerCountrySet, part)
				}
			}
		}
	} else {
		manufacturerCountrySet = categorySet
	}

	// –§–∏–ª—å—Ç—Ä—É–µ–º –¥–µ—Ç–∞–ª–∏ –ø–æ —Ç–µ–≥–∞–º
	tags := filter.GetTags()
	if len(tags) > 0 {
		tagSet = tagFilter(manufacturerCountrySet, tags)
	} else {
		tagSet = manufacturerCountrySet
	}

	return &inventoryV1.ListPartsResponse{
		Parts: tagSet,
	}, nil
}

// tagFilter —Ñ–∏–ª—å—Ç—Ä—É–µ—Ç –¥–µ—Ç–∞–ª–∏ –ø–æ —Ç–µ–≥–∞–º
func tagFilter(details []*inventoryV1.Part, tagsFilter []string) (result []*inventoryV1.Part) {
	m := map[string]bool{}
	for _, tag := range tagsFilter {
		m[tag] = true
	}

	for _, detail := range details {
		detailTags := detail.GetTags()
		for _, tag := range detailTags {
			if m[tag] {
				result = append(result, detail)
				break
			}
		}
	}

	return result
}